--- a/source/ui/styles.scss
+++ b/source/ui/styles.scss
@@ -1,20 +1,18 @@
 
 
 html {
-    background-color: #24487C;
+    background-color: White;
 }
 
 body {
-    font-family: Arial, Helvetica, sans-serif;
-    background-color: #E2D2C5;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    background-color: lightblue;
     margin: 0;
     padding: 0;
-    width: 95%;
-    max-width: 960px;
-    min-width: 660px;
+    width: 100%;
     margin: 0 auto;
-    line-height: 1.5;
 }
+
 body > header > img {
     width: 100%;
     float: left;
@@ -26,13 +24,12 @@ body > header > nav {
 }
 
 body > header > nav li {
+    background-color: navy;
     display: block;
+    font-weight: bolder;
     float: left;
     width: 25%;
-    background-color: #C0755E;
-    color: #E2D2C5;
-    line-height: 2;
-    font-weight: bold;
+    line-height: 2.5;
 }
 
 body > header > nav a {
@@ -41,33 +38,19 @@ body > header > nav a {
 }
 
 nav ul {
-    list-style-type: none;
     padding: 0;
     margin: 0;
 }
 
 nav a {
     text-decoration: none;
-    color: #E2D2C5;
-}
-
-header::after {
-    content: "";
-    display: table;
-    clear: both;
-}
-
-main {
-    clear: both;
-}
-
-footer {
-    clear: both;
+    color: white;
 }
 
 nav a:hover {
     color: #E2D2C5;
-    background-color: #7F3B00;
+    background-color: white;
+    color: navy;
 }
 
 nav a.active {
@@ -76,21 +59,12 @@ nav a.active {
 }
 
 article {
-    padding: 1rem;
+    padding: 1vh;
+    padding-top: 50px;
+    text-shadow: 1px 1px white, -1px -1px white, -1px 1px white, 1px -1px white;
+    line-height: 3vh;
 }
 article img {
-    width: 300px;
-    float: right;
-}
-
-footer {
+    width: 25%;
     clear: both;
-    line-height: 2;
-    color: #E2D2C5;
-    background-color: #C0755E;
-}
-
-footer address {
-    text-align: center;
-    font-style: normal;
 }
