--- a/source/ui/styles.scss
+++ b/source/ui/styles.scss
@@ -35,6 +35,7 @@ body > header > nav li {
 body > header > nav a {
     display: block;
     text-align: center;
+    font-size: 20px;
 }
 
 nav ul {
@@ -47,15 +48,17 @@ nav a {
     color: white;
 }
 
-nav a:hover {
-    color: #E2D2C5;
-    background-color: white;
-    color: navy;
+nav a.current {
+    text-shadow: 1px 1px navy, -1px -1px navy, -1px 1px navy, 1px -1px navy;
+    color: rgb(24, 109, 228);
+    background-color: rgb(250, 250, 250);
+    font-weight: bold;
 }
 
-nav a.active {
-    color: #24487C;
-    background-color: #E2D2C5;
+nav a:hover {
+    background-color: white;
+    color: navy;
+    text-shadow: 1px 1px white, -1px -1px white, -1px 1px white, 1px -1px white;
 }
 
 article {
